# Dashboard_app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
src/: app.py  config.py
src/dashboard/: views.py
src/dashboard/static/: app.js
src/dashboard/templates/dashboard/: base.html  index.html  show.html
src/pi_estimate/: views.py
src/pi_estimate/static/: app.js
src/pi_estimate/templates/pi_estimate/: show.html
src/templates/: base.html  index.html
src/web/: app.py
src/web/static/: app.js  styles.css
src/web/templates/: base.html  dashboard.html  index.html
tests/: conftest.py  test_api.py
